# Add GLFW as a submodule
set(GLFW_BUILD_EXAMPLES OFF PARENT_SCOPE)
set(GLFW_BUILD_TESTS OFF PARENT_SCOPE)
set(GLFW_BUILD_DOCS OFF PARENT_SCOPE)
set(GLFW_INSTALL OFF PARENT_SCOPE)

add_subdirectory(glfw)
set(GLFW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include PARENT_SCOPE)

# Add GLM (header-only)
set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glm PARENT_SCOPE)